--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-table {
-  border-collapse: collapse;
-  width: 100%;
+.sr-only {
+  position: absolute;
+  top: -30em;
 }
 
 .table-wrapper {
@@ -10,7 +10,46 @@ table {
   overflow-x: auto;
 }
 
-td, th {
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+}
+
+th.not-sortable {
+  padding: 8px;
+  font-size: 100%;
+  font-weight: bold;
+}
+
+th.sortable:focus,
+th.sortable:hover,
+th.selected-header {
+  background-color: #e5f4ff;
+}
+
+table.sortable th button {
+  padding: 8px;
+  font-size: 100%;
+  font-weight: bold;
+  background: transparent;
+  border: none;
+  display: inline;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: left;
+  outline: none;
+  cursor: pointer;
+}
+
+td {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
@@ -18,9 +57,4 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
-}
-
-th.sortable:focus,
-th.sortable:hover {
-  background-color: #e5f4ff;
 }
